--- a/ChatGPT/Makemore/MLP/MLP v4.ipynb
+++ b/ChatGPT/Makemore/MLP/MLP v4.ipynb
@@ -191,7 +191,7 @@
     "\n",
     "        # Linear Layer 2\n",
     "        dh = dlogits @ w2.T\n",
-    "        dW2 = h.T @ dlogits\n",
+    "        dw2 = h.T @ dlogits\n",
     "        db2 = dlogits.sum(0)\n",
     "        \n",
     "        # Non-Linearity\n",
@@ -212,7 +212,7 @@
     "        dC = t.zeros_like(C)\n",
     "        dC = dC.index_add_(0, Xb.view(-1),  demb.view(-1, 10))\n",
     "\n",
-    "        grads = [dC, dW1, db1, dW2, db2, dbngain, dbnbias]\n",
+    "        grads = [dC, dw1, db1, dw2, db2, dbngain, dbnbias]\n",
     "\n",
     "        # Update\n",
     "        lr = 0.1 if i < 100000 else 0.01\n",
