--- a/ChatGPT/GPT-2/Chat GPT.ipynb
+++ b/ChatGPT/GPT-2/Chat GPT.ipynb
@@ -2,18 +2,20 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 2,
    "id": "57aade92-e8b6-4e93-ba6f-e695ff62dc6e",
    "metadata": {},
    "outputs": [],
    "source": [
     "import torch as t\n",
-    "import requests"
+    "import requests\n",
+    "import torch.nn as nn\n",
+    "from torch.nn import functional as F"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "id": "71fb4696-6d27-4baf-adb5-735c1ed2eb1a",
    "metadata": {},
    "outputs": [],
@@ -26,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "id": "b1aea8e2-e716-4e9a-8fcc-6402cf59bc25",
    "metadata": {},
    "outputs": [],
@@ -37,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 5,
    "id": "df9d4bf7-d20b-49b0-8de0-f6f76293f6db",
    "metadata": {},
    "outputs": [
@@ -55,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 6,
    "id": "1be371e1-5777-427e-ba79-fba535bf953d",
    "metadata": {},
    "outputs": [
@@ -113,7 +115,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 7,
    "id": "c56a8824-c67e-4386-a0de-802ebe8b80f7",
    "metadata": {},
    "outputs": [
@@ -136,7 +138,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 8,
    "id": "152d3ca9-d1c0-48be-a613-41a0101ef57d",
    "metadata": {},
    "outputs": [
@@ -162,7 +164,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 9,
    "id": "c75c1d24-128d-497d-b10d-cd8b01d38957",
    "metadata": {},
    "outputs": [
@@ -239,7 +241,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 10,
    "id": "a00c10c1-cd0c-4f35-bc22-8da43d2d899d",
    "metadata": {},
    "outputs": [],
@@ -252,7 +254,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 11,
    "id": "f532819d-562f-44df-852d-ee9d05ce6b8c",
    "metadata": {},
    "outputs": [
@@ -262,7 +264,7 @@
        "tensor([18, 47, 56, 57, 58,  1, 15, 47])"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -274,7 +276,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 12,
    "id": "21f32c81-328c-4ead-b860-e543a1e883cb",
    "metadata": {},
    "outputs": [
@@ -304,7 +306,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 21,
    "id": "66cc8d23-161f-4eff-bf89-3fc4d4add642",
    "metadata": {},
    "outputs": [
@@ -319,39 +321,7 @@
       "tensor([[43, 58,  5, 57,  1, 46, 43, 39],\n",
       "        [53, 56,  1, 58, 46, 39, 58,  1],\n",
       "        [58,  1, 58, 46, 39, 58,  1, 46],\n",
-      "        [17, 27, 10,  0, 21,  1, 54, 39]])\n",
-      "When input is [24], the target is: 43\n",
-      "When input is [24, 43], the target is: 58\n",
-      "When input is [24, 43, 58], the target is: 5\n",
-      "When input is [24, 43, 58, 5], the target is: 57\n",
-      "When input is [24, 43, 58, 5, 57], the target is: 1\n",
-      "When input is [24, 43, 58, 5, 57, 1], the target is: 46\n",
-      "When input is [24, 43, 58, 5, 57, 1, 46], the target is: 43\n",
-      "When input is [24, 43, 58, 5, 57, 1, 46, 43], the target is: 39\n",
-      "When input is [44], the target is: 53\n",
-      "When input is [44, 53], the target is: 56\n",
-      "When input is [44, 53, 56], the target is: 1\n",
-      "When input is [44, 53, 56, 1], the target is: 58\n",
-      "When input is [44, 53, 56, 1, 58], the target is: 46\n",
-      "When input is [44, 53, 56, 1, 58, 46], the target is: 39\n",
-      "When input is [44, 53, 56, 1, 58, 46, 39], the target is: 58\n",
-      "When input is [44, 53, 56, 1, 58, 46, 39, 58], the target is: 1\n",
-      "When input is [52], the target is: 58\n",
-      "When input is [52, 58], the target is: 1\n",
-      "When input is [52, 58, 1], the target is: 58\n",
-      "When input is [52, 58, 1, 58], the target is: 46\n",
-      "When input is [52, 58, 1, 58, 46], the target is: 39\n",
-      "When input is [52, 58, 1, 58, 46, 39], the target is: 58\n",
-      "When input is [52, 58, 1, 58, 46, 39, 58], the target is: 1\n",
-      "When input is [52, 58, 1, 58, 46, 39, 58, 1], the target is: 46\n",
-      "When input is [25], the target is: 17\n",
-      "When input is [25, 17], the target is: 27\n",
-      "When input is [25, 17, 27], the target is: 10\n",
-      "When input is [25, 17, 27, 10], the target is: 0\n",
-      "When input is [25, 17, 27, 10, 0], the target is: 21\n",
-      "When input is [25, 17, 27, 10, 0, 21], the target is: 1\n",
-      "When input is [25, 17, 27, 10, 0, 21, 1], the target is: 54\n",
-      "When input is [25, 17, 27, 10, 0, 21, 1, 54], the target is: 39\n"
+      "        [17, 27, 10,  0, 21,  1, 54, 39]])\n"
      ]
     }
    ],
@@ -379,40 +349,162 @@
     "    for y in range(block_size):\n",
     "        context = xb[i,:y+1]\n",
     "        target = yb[i,y]\n",
-    "        print(f\"When input is {context.tolist()}, the target is: {target}\")"
+    "        # print(f\"When input is {context.tolist()}, the target is: {target}\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "feed687f-7471-4f4a-824e-8837ef5de37d",
+   "execution_count": 28,
+   "id": "2a4a8728-c7b5-4862-8450-222eb4ececec",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "torch.Size([32, 65])\n",
+      "tensor(4.6893, grad_fn=<NllLossBackward0>)\n",
+      "\n",
+      "w;djAIOn:$KqN-CSLaxJKu:REk;dAbuzEckMz! VX\n",
+      " : kNzGW:cFjAZ$U,GDQnhGqgE-RFOR:;ORBhOhKBqKmwWOj'PKswhfYSn\n"
+     ]
+    }
+   ],
+   "source": [
+    "class BigramLanguageModel(nn.Module):\n",
+    "\n",
+    "    def __init__(self, vocab_size):\n",
+    "        super().__init__()\n",
+    "        self.token_embedding_table = nn.Embedding(vocab_size, vocab_size)\n",
+    "\n",
+    "    def forward(self, idx, targets=None):\n",
+    "        \n",
+    "        # idx and targets are (B, T) tensors of integers\n",
+    "        logits = self.token_embedding_table(idx)    # B, T, C\n",
+    "        \n",
+    "        if targets is None:\n",
+    "            loss = None\n",
+    "        else:\n",
+    "            B, T, C = logits.shape\n",
+    "            logits = logits.view(B*T, C)\n",
+    "            targets = targets.view(B*T)\n",
+    "            loss = F.cross_entropy(logits, targets)\n",
+    "        \n",
+    "        return logits, loss\n",
+    "\n",
+    "    def generate(self, idx, max_new_tokens):\n",
+    "\n",
+    "        # idx is (B, T) array of indices in the current context\n",
+    "        for _ in range(max_new_tokens):\n",
+    "            # get the predictions\n",
+    "            logits, loss = self(idx)\n",
+    "            # focus only on the last time step\n",
+    "            logits = logits[:, -1, :]                         # (B, C)\n",
+    "            # apply softmax to get probs\n",
+    "            probs = F.softmax(logits, dim=1)                  # (B, C)\n",
+    "            # sample from the distribution\n",
+    "            idx_next = t.multinomial(probs, num_samples=1)    # (B, 1)\n",
+    "            # append sampled index to the running sequence\n",
+    "            idx = t.cat((idx, idx_next), dim=1)               # (B, T+1)\n",
+    "\n",
+    "        return idx\n",
+    "\n",
+    "            \n",
+    "\n",
+    "m = BigramLanguageModel(vocab_size)\n",
+    "logits, loss = m(xb, yb)\n",
+    "print(logits.shape)\n",
+    "print(loss)\n",
+    "\n",
+    "print(decode(m.generate(t.zeros((1, 1), dtype=t.long), max_new_tokens=100)[0].tolist()))"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "8ebd4233-357d-4ecd-9c1f-5c1f48faef16",
+   "execution_count": 30,
+   "id": "acf2ed14-0659-4c54-813a-a314d1d03b38",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "AdamW (\n",
+      "Parameter Group 0\n",
+      "    amsgrad: False\n",
+      "    betas: (0.9, 0.999)\n",
+      "    capturable: False\n",
+      "    differentiable: False\n",
+      "    eps: 1e-08\n",
+      "    foreach: None\n",
+      "    fused: None\n",
+      "    lr: 0.001\n",
+      "    maximize: False\n",
+      "    weight_decay: 0.01\n",
+      ")\n"
+     ]
+    }
+   ],
+   "source": [
+    "# optimizer\n",
+    "optimizer = t.optim.AdamW(m.parameters(), lr=1e-3)"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "d0810c5a-bb67-4977-a93a-fa2d47163115",
+   "execution_count": 41,
+   "id": "5dfcb341-c031-427b-814e-472b82041490",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2.523376941680908\n",
+      "2.4435908794403076\n"
+     ]
+    }
+   ],
+   "source": [
+    "batch_size = 32\n",
+    "\n",
+    "print(loss.item())\n",
+    "for steps in range(10000):\n",
+    "\n",
+    "    # sample a batch of data\n",
+    "    xb, yb = get_batch(\"train\")\n",
+    "\n",
+    "    # evaluate the loss\n",
+    "    logits, loss = m(xb, yb)\n",
+    "    optimizer.zero_grad(set_to_none=True)\n",
+    "    loss.backward()\n",
+    "    optimizer.step()\n",
+    "\n",
+    "print(loss.item())"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "1d07b62a-7b1a-4102-ac79-3c26dadcf25e",
+   "execution_count": 42,
+   "id": "ab307aec-a2c6-43f8-9ef1-baa7ef483ab6",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "\n",
+      "\n",
+      "Butigen haty'thowh tharey ou wonglly ILOxck; bllllove my, hef derit d.\n",
+      "Wike.\n",
+      "ERI yowouthe mees cir\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(decode(m.generate(t.zeros((1, 1), dtype=t.long), max_new_tokens=100)[0].tolist()))"
+   ]
   }
  ],
  "metadata": {
